--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body {
   font-size: 2.5em;
 }
 
+.airplane-img {
+  position: absolute;
+  right: -200px;
+}
+
 
 @media (max-width: 600px) {
   .jumbotron p {
