changes units to percentages

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,13 +19,13 @@ body {
 .airplane-img {
   position: absolute;
   top: 9%;
-  right: -250px;
+  right: -14%;
 }
 
 .a380-airplane-img {
   position: absolute;
   left: 30%;
-  bottom: -300px;
+  bottom: -37%;
 }
 
 
