--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,10 +28,12 @@ body {
   bottom: -40%;
 }
 
-/*.jet-img {
-  height: 100%;
-  width: 100%;
-}*/
+.jet-img {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
 
 .nile {
   height: 60%;
