--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,20 +17,23 @@ body {
 }
 
 .airplane-img {
+  width: 35%;
   position: absolute;
   top: 9%;
-  right: -50%;
+  right: -40%;
 }
 
 .a380-airplane-img {
+  width: 40%;
+  height: 40%;
+  max-height: 100%;
+  max-width: 100%;
   position: absolute;
   left: 30%;
   bottom: -40%;
 }
 
 .jet-img {
-  height: auto;
-  width: auto;
   max-width: 100%;
   max-height: 100%;
 }
