--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", "Helvetica", "Liberation Sans", "Arial", "sans-serif" ;
   font-weight: 200;
 }
 
